--- a/api/keydb.conf
+++ b/api/keydb.conf
@@ -14,15 +14,15 @@ loglevel notice
 logfile ""
 databases 16
 
-# Memory management
-maxmemory 256mb
+# Memory management - оптимизировано для 768MB RAM
+maxmemory 128mb
 maxmemory-policy allkeys-lru
 
 # Persistence
 save 900 1
 save 300 10
 save 60 10000
-stop-writes-on-bgsave-error no
+stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
@@ -51,3 +51,7 @@ slowlog-max-len 128
 
 # Latency monitoring
 latency-monitor-threshold 100
+
+# Replication settings - ensure master mode
+slave-read-only no
+replica-read-only no
