--- a/nginx.loadbalancer.conf
+++ b/nginx.loadbalancer.conf
@@ -1,5 +1,7 @@
 events {
-    worker_connections 1024;
+    worker_connections 256;  # Уменьшено для экономии памяти
+    use epoll;               # Эффективный метод для Linux
+    multi_accept on;         # Принимать несколько соединений за раз
 }
 
 http {
@@ -40,28 +42,18 @@ http {
         application/atom+xml
         image/svg+xml;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=health:10m rate=30r/s;
+    # Rate limiting - уменьшены зоны для экономии памяти
+    limit_req_zone $binary_remote_addr zone=api:1m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=health:1m rate=30r/s;
 
-    # Upstream API servers
+    # Upstream API server
     upstream api_backend {
-        # Load balancing method: round-robin (default)
-        # Other options: least_conn, ip_hash, hash
-        
-        server api1:8080 max_fails=3 fail_timeout=30s weight=1;
-        server api2:8080 max_fails=3 fail_timeout=30s weight=1;
-        server api3:8080 max_fails=3 fail_timeout=30s weight=1;
-        
-        # Health check (nginx-plus feature, not available in open source)
-        # keepalive 32;
+        server api:8080 max_fails=3 fail_timeout=30s weight=1;
     }
 
     # Health check upstream for monitoring
     upstream health_backend {
-        server api1:8080;
-        server api2:8080;
-        server api3:8080;
+        server api:8080;
     }
 
     # Main server block
